Changed C-style cast to C++ cast.

--- a/Samples/FirstSample/FirstSample.vcxproj
+++ b/Samples/FirstSample/FirstSample.vcxproj
@@ -142,7 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="maincpp.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\EventLibrary\EventLibrary.vcxproj">
